--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   material: ^1.0.0+2
   google_fonts: ^3.0.1
+  email_validator: '^2.1.16'
 
 dev_dependencies:
   flutter_test:
